test/condTwoAssertFalse.slq
// args: --run

def main(){
	x:=if true { assert(false); } else{ assert(false); }; // error
}
